--- a/about.Rmd
+++ b/about.Rmd
@@ -1,10 +1,11 @@
 ---
-title: "About this site"
+title: "About Waffle's site"
 description: |
-  Some additional details about the website
+  Some additional details about the website dedicated to Waffle
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
+Here's some text about Waffle
