--- a/_portfolio/2022-02-27-toolik/toolik.Rmd
+++ b/_portfolio/2022-02-27-toolik/toolik.Rmd
@@ -9,6 +9,7 @@ output:
   distill::distill_article:
     self_contained: false
     code_folding: show
+preview: https://rstudio.github.io/distill/images/javascript-d3-preview.png
 ---
 
 ```{r setup, include = TRUE, message = FALSE, warning = FALSE}
