checking different methods of previews, changing base_url

--- a/_portfolio/2022-02-27-penguins/penguins.Rmd
+++ b/_portfolio/2022-02-27-penguins/penguins.Rmd
@@ -10,7 +10,7 @@ output:
   distill::distill_article:
     self_contained: false
     code_folding: show
-base_url: https://oharac.github.io
+base_url: test
 ---
 
 
